# strategy_design_project

./: README.md  main.py  pyproject.toml
context/: context.py
interfaces/: strategy.py
services/: brasil_api.py  via_cep.py
