[project]
name = "strategy"
version = "0.1.0"
description = "Projeto voltado para estudar o pdesign de projeto Strategy"
authors = [
    {name = "Mateus Portela"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pycodestyle (>=2.14.0,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
